changed master layout to prevent double title

--- a/src/_layouts/post.cshtml
+++ b/src/_layouts/post.cshtml
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: layout
 ---
 @inherits RazorEngine.Templating.TemplateBase<Pretzel.Logic.Templating.Context.PageContext>
 
